# creative-automation-poc

./: .env.example  .gitignore  AGENTS.md  ASSIGNMENT.md  MILESTONES.md  README.md  SPEC.md  main.py  pyproject.toml  run.sh
input_examples/briefs/: summer_refresh.yaml
src/creative_automation/: asset_store.py  brief_loader.py  cli.py  color_selector.py  generators.py  localization.py  models.py  pipeline.py  prompt_planner.py  renderer.py  reporter.py  settings.py
tests/: test_asset_store.py  test_brief_loader.py  test_cli.py  test_color_selector.py  test_generators.py  test_localization.py  test_pipeline_generation.py  test_pipeline_rendering.py  test_prompt_planner.py  test_renderer.py  test_reporter.py  test_settings.py
