[project]
name = "creative-automation-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=2.0.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
